1.kaptcha实现 2.整理数据 3.代码优化